Changed some classes names

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <span>Monthly</span>
     </div>
 
-    <div id="flexy" class="flex">
+    <div id="flexor" class="table-container">
       <div class="price-box">
         <h4>Basic</h4>
         <p>
